# manga_learning

./: .gitignore  README.md
.github/workflows/: pages.yml
backend/: cli.py  pyproject.toml  seed_demo.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: books.py  glossary.py  pages.py  panels.py  search.py  series.py
backend/app/services/: images.py  metadata.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AddBookModal.jsx  AddSeriesModal.jsx  CameraCapture.jsx
frontend/src/pages/: BookDetail.jsx  Library.jsx  Reader.jsx  SeriesDetail.jsx
scripts/: data.sh
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  DataContext.jsx  db.js  local.js  main.jsx  styles.css
web/src/components/: LocalImage.jsx
web/src/pages/: BookDetail.jsx  Library.jsx  Reader.jsx  SeriesDetail.jsx
