[project]
name = "manga-learning-backend"
version = "0.1.0"
description = "Backend for the manga reading + Japanese learning app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pillow>=10.4",
    "python-multipart>=0.0.12",
    "typer>=0.12",
    "rich>=13.7",
    "pymupdf>=1.27.2.3",
]

[tool.uv]
package = false
